--- a/src/components/post-list-item/post-list-item.css
+++ b/src/components/post-list-item/post-list-item.css
@@ -2,6 +2,21 @@
   font-size: 1.25rem;
 }
 
+.app-list-item span {
+  display: block;
+  line-height: 35px;
+  cursor: pointer;
+  user-select: none;
+  transition: 0.5s all;
+  white-space: nowrap;  /* Отменяем перенос текста */
+  overflow: hidden;  /* Обрезаем содержимое */
+  text-overflow: ellipsis;  /* Многоточие */
+}
+.app-list-item span:hover {
+  background: #eaf5fc;
+  white-space: normal;
+}
+
 .app-list-item button {
   width: 35px;
   height: 35px;
@@ -10,39 +25,35 @@
   border: none;
   cursor: pointer;
 }
+
 .app-list-item button:focus {
-    box-shadow: none;
-    outline: none;
-}
-.app-list-item .btn-star {
-    color: #FFD700;
-}
-.app-list-item .btn-trash {
-    color: red;
-}
-.app-list-item .fa-heart {
-    width: 35px;
-    height: 35px;
-    text-align: center;
-    line-height: 35px;
-    font-size: 16px;
-    color: red;
-    transition: 0.3s all;
-    transform: translateX(30px);
-    opacity: 0;
+  box-shadow: none;
+  outline: none;
 }
 
-.app-list-item-label {
-  display: block;
+.app-list-item .btn-star {
+  color: #FFD700;
+}
+
+.app-list-item .btn-trash {
+  color: red;
+}
+
+.app-list-item .fa-heart {
+  width: 35px;
+  height: 35px;
+  text-align: center;
   line-height: 35px;
-  cursor: pointer;
-  user-select: none;
-  transition: 0.5s all;
+  font-size: 16px;
+  color: red;
+  transition: 0.3s all;
+  transform: translateX(30px);
+  opacity: 0;
 }
 
 .app-list-item.like .fa-heart {
-    opacity: 1;
-    transform: translateX(0px);
+  opacity: 1;
+  transform: translateX(0px);
 }
 
 .app-list-item.important .app-list-item-label {
@@ -50,5 +61,5 @@
 }
 
 .app-list-item.important .btn-star {
-    color: #aeaeae;
+  color: #aeaeae;
 }
